--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 300;
+  z-index: 800;
   background-color: white;
 }
 
